# tomoe

./: AUTHORS  ChangeLog  ChangeLog.jp  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  tomoe.pc.in  tomoe.spec.in
data/: Makefile.am  all.tdic  all.xml  config  config.xml  dict.dtd  handwriting.xml  kanjidic2-original.xsl  kanjidic2.xsl  readingtest.xml  tomoe-dict.dtd  xml2binary.c  xml2zinnia.c
doc/: .cvsignore  Makefile.am
doc/reference/: .cvsignore  Makefile.am  tomoe-docs.sgml  tomoe-sections.txt  tomoe.types
doc/reference/tmpl/: tomoe-candidate.sgml  tomoe-char.sgml  tomoe-config.sgml  tomoe-dict.sgml  tomoe-query.sgml  tomoe-reading.sgml  tomoe-shelf.sgml  tomoe-unused.sgml  tomoe-writing.sgml
ext/python/: Makefile.am  tomoe-char.override  tomoe-dict.override  tomoe-module.c  tomoe-recognizer.override  tomoe-shelf.override  tomoe-writing.override  tomoe.override
ext/ruby/: Makefile.am  rbtomoe.h  tomoe-rb-candidate.c  tomoe-rb-char.c  tomoe-rb-config.c  tomoe-rb-context.c  tomoe-rb-dict.c  tomoe-rb-handwrite.c  tomoe-rb-module.c  tomoe-rb-query.c  tomoe-rb-reading.c  tomoe-rb-recognizer.c  tomoe-rb-writing.c  tomoe-rb.c  tomoe-rb.h
lib/: .cvsignore  Makefile.am  array.c  array.h  glib-compat-file-utilities.h  glib-utils.c  glib-utils.h  tomoe-array.c  tomoe-array.h  tomoe-candidate.c  tomoe-candidate.h  tomoe-char.c  tomoe-char.h  tomoe-config.c  tomoe-config.h  tomoe-context.c  tomoe-context.h  tomoe-data-types.h  tomoe-db.c  tomoe-db.h  tomoe-dict-impl.h  tomoe-dict-loader.c  tomoe-dict-ptr-array.c  tomoe-dict.c  tomoe-dict.h  tomoe-handwrite.c  tomoe-handwrite.h  tomoe-letter.c  tomoe-letter.h  tomoe-module-impl.h  tomoe-module.c  tomoe-module.h  tomoe-object.h  tomoe-query.c  tomoe-query.h  tomoe-reading.c  tomoe-reading.h  tomoe-recognizer-impl.h  tomoe-recognizer-loader.c  tomoe-recognizer.c  (+8 more)
module/dict/: .cvsignore  Makefile.am  tomoe-dict-binary.c  tomoe-dict-est.c  tomoe-dict-mysql.c  tomoe-dict-ptr-array.c  tomoe-dict-ptr-array.h  tomoe-dict-ruby.c  tomoe-dict-svn.c  tomoe-dict-unihan.c  tomoe-dict-xml.c  tomoe-unihan-data0.c  tomoe-unihan-data4.c  tomoe-unihan-data5.c  tomoe-unihan-data7.c  tomoe-unihan-data8.c  tomoe-unihan.c  tomoe-unihan.h  unihan-compiler.rb  unihan-schemer.rb
module/recognizer/: Makefile.am  tomoe-recognizer-simple.c  tomoe-recognizer-zinnia.c
src/: .cvsignore  Makefile.am  main.c  match.c  match.rb  tomoe.h
test/: .cvsignore  Makefile.am  aki  char_spec.rb  config_spec.rb  context_spec.rb  dict_spec.rb  fuyu  handwrite_spec.rb  natu  nichi  run-specs.sh  run-test.sh  test.py  test_context.rb  test_writing.rb  testreading.c  testtomoe.c  tomoe-config.xml  tomoe-spec-utils.rb  tomoe-test-utils.rb
test/data/: Makefile.am  aki.data  fuyu.data  haru.data  hayashi.data  ike.data  matu.data  natu.data  nichi.data  niku.data  one_stroke.data  test-dict.xml
test/python/: Makefile.am  runtests.py  test_candidate.py  test_char.py  test_common.py  test_config.py  test_context.py  test_dict.py  test_dict_est.py  test_dict_unihan.py  test_dict_xml.py  test_query.py  test_reading.py  test_recognizer.py  test_writing.py
tomoe/trunk/: .cvsignore  AUTHORS  ChangeLog  ChangeLog.jp  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  configure.in  tomoe.pc.in  tomoe.spec.in
tomoe/trunk/benchmark/: Makefile.am  evaluation.rb  load-dict.rb  search-by-dict.rb  search-by-recognizer.rb
tomoe/trunk/bindings/python/: Makefile.am  pytomoe-utils.h  tomoe-char.override  tomoe-context.override  tomoe-dict.override  tomoe-module.c  tomoe-python-utils.h  tomoe-recognizer.override  tomoe-writing.override  tomoe.defs
tomoe/trunk/bindings/ruby/: tomoe.rb
tomoe/trunk/data/: Makefile.am  all.tdic  all.xml  config  dict.dtd  handwriting.xml  hiragana.tdic  kanjidic2-original.xsl  kanjidic2.xsl  kanjidic2xml.rb  meta.xsl  readingtest.xml  sample-data.txt  userdb.xml  xml2binary.rb  xml2zinnia.c
tomoe/trunk/db/: config.yml.example  init.rb  search.rb  xml2db.rb
tomoe/trunk/db/lib/: .cvsignore  char.rb  meta_datum.rb  reading.rb
tomoe/trunk/db/migrate/: 001_create_chars.rb  002_create_readings.rb  003_create_radicals.rb  004_create_meta_data.rb
tomoe/trunk/dict/: Makefile.am  tomoe-dict-xml.c
tomoe/trunk/doc/: Makefile.am  doxygen.conf  doxygen.conf.in
tomoe/trunk/doc/reference/: tomoe-docs.sgml  tomoe-overrides.txt  tomoe.types
tomoe/trunk/ext/: Makefile.am
tomoe/trunk/ext/python/: tomoe-char.override  tomoe-context.override  tomoe-dict.override  tomoe-module.c  tomoe-query.override  tomoe-recognizer.override  tomoe-shelf.override  tomoe-writing.override  tomoe.defs  tomoe.override
tomoe/trunk/ext/ruby/: Makefile.am  tomoe-rb-candidate.c  tomoe-rb-char.c  tomoe-rb-config.c  tomoe-rb-context.c  (+9 more)
tomoe/trunk/lib/: .cvsignore  Makefile.am  array.c  array.h  glib-compat-file-utilities.c  glib-compat-file-utilities.h  glib-compat-key-file.c  glib-compat-key-file.h  glib-utils.c  glib-utils.h  tomoe-array.c  tomoe-array.h  tomoe-candidate.c  tomoe-candidate.h  tomoe-char.c  tomoe-char.h  tomoe-config.c  tomoe-config.h  tomoe-context.c  tomoe-context.h  tomoe-data-types.h  tomoe-db.c  tomoe-db.h  tomoe-dict-impl.h  tomoe-dict-loader.c  tomoe-dict-loader.h  tomoe-dict-ptr-array.c  tomoe-dict-ptr-array.h  tomoe-dict.c  tomoe-dict.h  tomoe-handwrite.c  tomoe-handwrite.h  tomoe-letter.c  tomoe-letter.h  tomoe-module-impl.h  tomoe-module.c  tomoe-module.h  tomoe-object.h  tomoe-query.c  tomoe-query.h  (+15 more)
tomoe/trunk/macros/: python.m4  ruby.m4  svn.m4
tomoe/trunk/recognizer/: Makefile.am  tomoe-recognizer-simple-logic.c  tomoe-recognizer-simple-logic.h  tomoe-recognizer-simple.c
tomoe/trunk/src/: Makefile.am  main.c  match.rb  tomoe.c
tomoe/trunk/test/: Makefile.am  char_spec.rb  context_spec.rb  dict_spec.rb  handwrite_spec.rb  haru  hayashi  matu  run-spec.rb  run-test.rb  run-test.sh  test-config.xml  test_char.rb  test_dict.rb  testreading.c  testtomoe.c  tomoe-spec-utils.rb  tomoe-test-utils.rb  writing_spec.rb
tomoe/trunk/utils/: Makefile.am  dictionary.rb  gtk2dictview.rb  makexmldict.rb  xml2est.rb
(+108 files in other folders)
